--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Brian Keller-Heikkila",
-            "homepage": "https://github.com/brian-kellerheikkila"
+            "name": "Kelly Keller-Heikkila",
+            "homepage": "https://github.com/kelly-kellerheikkila"
         }
     ],
     "require": {
